--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
     "mongoose": "^7.1.0",
     "next": "13.3.4",
@@ -24,5 +25,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
