--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@types/react": "18.2.2",
     "@types/react-dom": "18.2.3",
     "autoprefixer": "10.4.14",
+    "cosmicjs": "^4.3.7",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "jsonwebtoken": "^9.0.0",
     "md5": "^2.3.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.3.4",
+    "next-connect": "^1.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +31,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7"
   }
 }
